stream.collect(Collectors.toList()) -> stream.toList()